--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
       rel="stylesheet"
     />
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="./lunges.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="fitness application" />
-    <title>React App</title>
+    <title>Anywhere Fitness</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
